# VoxelEngine

./: .gitignore  CMakeLists.txt
include/VoxelEngine/: engine.h
include/VoxelEngine/graphics/: Camera.h  camera.h  chunk_mesh.h  shader.h  texture_atlas.h
include/VoxelEngine/graphics/ui/: View.h
include/VoxelEngine/systems/: files.h  input.h  storage.h  time.h
include/VoxelEngine/world/: World.h  world.h
include/VoxelEngine/world/voxels/: Chunk.h  IBlockBase.h  IChunkGenerator.h  VoxelRay.h  block_base.h  chunk.h  chunk_generator.h  voxel.h
res/shaders/: chunk_voxel_shader.frag  chunk_voxel_shader.vert
scr/: main.cpp
scr/engine/: engine.cpp  engine.h
scr/engine/graphics/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  TextureAtlas.cpp  TextureAtlas.h  camera.cpp  chunk_mesh.cpp  shader.cpp  shader.h  texture_atlas.cpp
scr/engine/graphics/ui/: View.cpp
scr/engine/systems/: files.cpp  files.h  input.cpp  input.h  storage.cpp  storage.h  time.cpp  time.h
scr/engine/world/: World.cpp  World.h  world.cpp
scr/engine/world/voxels/: Chunk.cpp  Chunk.h  IBlockBase.cpp  IBlockBase.h  IChunkGenerator.h  TestChunkGenerator.cpp  TestChunkGenerator.h  VoxelRay.cpp  block_base.cpp  chunk.cpp  test_chunk_generator.cpp  test_chunk_generator.h  voxel.cpp  voxel.h
scr/engine/world/voxels/block_bases/: air.cpp  air.h  generic_solid.cpp  generic_solid.h
scr/engine/world/voxels/blocks/: AirBlockBase.cpp  AirBlockBase.h  GenericSolidBlockBase.cpp  GenericSolidBlockBase.h
scr/utils/: engine_internal.h  systems_internal.h
